add some few stufs

--- a/index.html
+++ b/index.html
@@ -195,15 +195,16 @@
   </a>
 </div>
 
-    <div class="modal" id="productModal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-          <img id="modalImg" src="" alt="Product" />
-          <h2 id="modalName"></h2>
-          <p id="modalPrice"></p>
-          <button id="purchaseBtn">Purchase</button>
-      </div>
-    </div>
+   <div id="productModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <img id="modalImage" src="" alt="Product Image" />
+    <h3 id="modalName"></h3>
+    <p id="modalPrice"></p>
+    <p id="modalDiscount"></p>
+    <button id="buyNowBtn">Buy Now</button>
+  </div>
+</div>
     
       
 
