made some few changes

--- a/cart.html
+++ b/cart.html
@@ -7,237 +7,190 @@
     <title>Document</title>
 </head>
 <body>
-   <style>
- body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f6f6f6;
-      margin: 0;
-      padding: 40px;
-    }
+  <style>
+body {
+  font-family: 'Poppins', sans-serif;
+  background: #f0f2f5;
+  margin: 0;
+  padding: 30px;
+}
 
-    .cart-checkout-container {
-      display: flex;
-      gap: 40px;
-      max-width: 1100px;
-      margin: auto;
-      flex-wrap: wrap;
-    }
+.cart-wrapper {
+  max-width: 900px;
+  margin: auto;
+  background: white;
+  padding: 25px;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+}
 
-    /* 🛒 CART SECTION */
-    .cart-container {
-      flex: 1;
-      min-width: 320px;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      padding: 25px;
-    }
+h2 {
+  text-align: center;
+  margin-bottom: 25px;
+}
 
-    .cart-container h2 {
-      text-align: center;
-      margin-bottom: 25px;
-    }
+.cart-item {
+  display: flex;
+  align-items: center;
+  padding: 15px 0;
+  border-bottom: 1px solid #eee;
+}
 
-    .cart-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-bottom: 1px solid #eee;
-      padding: 15px 0;
-    }
+.cart-item img {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  object-fit: cover;
+}
 
-    .cart-item img {
-      width: 70px;
-      height: 70px;
-      border-radius: 8px;
-      object-fit: cover;
-    }
+.item-details {
+  flex: 1;
+  margin-left: 15px;
+}
 
-    .item-details {
-      flex: 1;
-      margin-left: 15px;
-    }
+.item-details h4 {
+  margin: 0;
+  font-size: 18px;
+}
 
-    .item-details h4 {
-      margin: 0;
-      font-size: 1rem;
-    }
+.price {
+  font-weight: bold;
+  margin-top: 5px;
+}
 
-    .item-details p {
-      margin: 5px 0;
-      color: #666;
-      font-size: 0.9rem;
-    }
+.quantity-box {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  gap: 10px;
+}
 
-    .item-price {
-      font-weight: bold;
-    }
+.quantity-btn {
+  width: 28px;
+  height: 28px;
+  border: none;
+  background: #111;
+  color: white;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
-    .cart-total {
-      text-align: right;
-      margin-top: 20px;
-      font-size: 1.2rem;
-      font-weight: 600;
-    }
+.remove-btn {
+  color: red;
+  margin-top: 5px;
+  font-size: 13px;
+  cursor: pointer;
+}
 
-    .checkout-btn {
-      display: block;
-      width: 100%;
-      background-color: #00a86b;
-      color: #fff;
-      padding: 15px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-top: 20px;
-      transition: background 0.3s;
-    }
+.cart-total {
+  text-align: right;
+  margin-top: 20px;
+  font-size: 22px;
+  font-weight: bold;
+}
 
-    .checkout-btn:hover {
-      background-color: #008f5b;
-    }
+.checkout-btn {
+  width: 100%;
+  margin-top: 20px;
+  padding: 15px;
+  background: #00a86b;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-size: 17px;
+  cursor: pointer;
+}
 
-    /* 💳 CHECKOUT SECTION */
-    .checkout-container {
-      flex: 1;
-      min-width: 320px;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      padding: 25px;
-    }
+.checkout-btn:hover {
+  background: #008f5b;
+}
 
-    .checkout-container h2 {
-      text-align: center;
-      margin-bottom: 25px;
-    }
+.empty-cart {
+  text-align: center;
+  padding: 40px;
+  font-size: 20px;
+  color: #888;
+}
+</style>
 
-    label {
-      display: block;
-      margin: 10px 0 5px;
-      font-weight: 500;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      font-size: 0.95rem;
-    }
-
-    .pay-btn {
-      background-color: #000;
-      color: #fff;
-      width: 100%;
-      padding: 15px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .pay-btn:hover {
-      background-color: #333;
-    }
-
-    a.back-link {
-      display: block;
-      text-align: center;
-      margin-top: 15px;
-      color: #000;
-      text-decoration: none;
-    }
-
-    @media (max-width: 900px) {
-      .cart-checkout-container {
-        flex-direction: column;
-      }
-    }
-  </style>
 </head>
 <body>
 
-  <div class="cart-checkout-container">
-    
-    <!-- 🛒 CART SECTION -->
-    <div class="cart-container">
-      <h2>Your Cart</h2>
+<div class="cart-wrapper">
+  <h2>Your Shopping Cart</h2>
+  <div id="cartItems"></div>
+  <div id="totalBox" class="cart-total"></div>
+  <button id="checkoutBtn" class="checkout-btn" style="display:none;">Proceed to Checkout</button>
+</div>
 
+<script>
+function loadCart() {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let container = document.getElementById("cartItems");
+  let totalBox = document.getElementById("totalBox");
+  let checkoutBtn = document.getElementById("checkoutBtn");
+
+  if (cart.length === 0) {
+    container.innerHTML = '<div class="empty-cart">Your cart is empty 😢</div>';
+    totalBox.innerHTML = "";
+    checkoutBtn.style.display = "none";
+    return;
+  }
+
+  let html = "";
+  let total = 0;
+
+  cart.forEach((item, i) => {
+    let priceNum = parseInt(item.price.replace(/\D/g, ""));
+    total += priceNum * item.quantity;
+
+    html += `
       <div class="cart-item">
-        <img src="img/jotter 1.jpg" alt="Jotter">
+        <img src="${item.img}">
         <div class="item-details">
-          <h4>Jotter</h4>
-          <p>Qty: 1</p>
+          <h4>${item.name}</h4>
+          <div class="price">₦${priceNum.toLocaleString()}</div>
+
+          <div class="quantity-box">
+            <button class="quantity-btn" onclick="changeQty(${i}, -1)">-</button>
+            <span>${item.quantity}</span>
+            <button class="quantity-btn" onclick="changeQty(${i}, 1)">+</button>
+          </div>
+
+          <span class="remove-btn" onclick="removeItem(${i})">Remove</span>
         </div>
-        <div class="item-price">₦2,500</div>
       </div>
+    `;
+  });
 
-      <div class="cart-item">
-        <img src="img/cap 1.jpg" alt="Cap">
-        <div class="item-details">
-          <h4>Cap_I</h4>
-          <p>Qty: 2</p>
-        </div>
-        <div class="item-price">₦9,600</div>
-      </div>
+  container.innerHTML = html;
+  totalBox.innerHTML = `Total: ₦${total.toLocaleString()}`;
+  checkoutBtn.style.display = "block";
+}
 
-      <div class="cart-total">Total: ₦12,100</div>
-    </div>
+function changeQty(index, amount) {
+  let cart = JSON.parse(localStorage.getItem("cart"));
 
-    <!-- 💳 CHECKOUT SECTION -->
-    <div class="checkout-container">
-      <h2>Checkout</h2>
+  cart[index].quantity += amount;
+  if (cart[index].quantity < 1) cart[index].quantity = 1;
 
-      <form id="paymentForm">
-        <label>Full Name</label>
-        <input type="text" id="name" placeholder="Enter your full name" required>
+  localStorage.setItem("cart", JSON.stringify(cart));
+  loadCart();
+}
 
-        <label>Email</label>
-        <input type="email" id="email" placeholder="Enter your email" required>
+function removeItem(index) {
+  let cart = JSON.parse(localStorage.getItem("cart"));
+  cart.splice(index, 1);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  loadCart();
+}
 
-        <label>Shipping Address</label>
-        <input type="text" id="address" placeholder="Enter your address" required>
+document.getElementById("checkoutBtn").addEventListener("click", () => {
+  window.location.href = "checkout.html";
+});
 
-        <label>Payment Method</label>
-        <select id="paymentMethod" required>
-          <option value="">Select payment method</option>
-          <option value="card">Debit/Credit Card</option>
-          <option value="transfer">Bank Transfer</option>
-          <option value="cod">Cash on Delivery</option>
-        </select>
-
-        <button type="submit" class="pay-btn">Complete Payment</button>
-      </form>
-
-      <a href="./index.html" class="back-link">← continue shopping</a>
-    </div>
-  </div>
-
-  <script>
-    document.getElementById("paymentForm").addEventListener("submit", function(event) {
-      event.preventDefault(); // Stop form from submitting normally
-
-      // Get form values
-      const name = document.getElementById("name").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const address = document.getElementById("address").value.trim();
-      const method = document.getElementById("paymentMethod").value;
-
-      // Validation
-      if (name === "" || email === "" || address === "" || method === "") {
-        alert("⚠️ Please fill in all fields before making payment.");
-      } else {
-        alert("✅ Payment Successful! You have successfully purchased your items.");
-        // Clear form after successful payment
-        document.getElementById("paymentForm").reset();
-      }
-    });
-  </script>
+loadCart();
+</script>
 
 
 </body>
