--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@
    <div id="productModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <img id="modalImage" src="" alt="Product Image" />
-    <h3 id="modalName"></h3>
-    <p id="modalPrice"></p>
-    <p id="modalDiscount"></p>
-    <button id="buyNowBtn">Buy Now</button>
+
+    <img id="modalImg" src="" alt="Product Image">
+    <h2 id="modalName"></h2>
+    <p class="modal-price" id="modalPrice"></p>
+
+    <button id="addToCartBtn" class="add-btn">Add to Cart</button>
   </div>
 </div>
     
@@ -218,55 +219,60 @@
     }, 4000); // 4000ms = 4 seconds
   });
 
-  const modal = document.getElementById("productModal");
+
+
+const modal = document.getElementById("productModal");
 const modalImg = document.getElementById("modalImg");
 const modalName = document.getElementById("modalName");
 const modalPrice = document.getElementById("modalPrice");
-const closeBtn = document.querySelector(".close");
-const purchaseBtn = document.getElementById("purchaseBtn");
+const addToCartBtn = document.getElementById("addToCartBtn");
 
-let selectedProduct = null;
+let selectedProduct = {};
 
-// Open modal when "Select options" clicked
-document.querySelectorAll(".btn").forEach((btn) => {
-  btn.addEventListener("click", (e) => {
-    const product = e.target.closest(".product-card");
-    const name = product.dataset.name;
-    const price = product.dataset.price;
-    const img = product.dataset.img;
+// Open popup
+document.querySelectorAll(".product").forEach(product => {
+  product.querySelector(".bt").addEventListener("click", () => {
 
-    selectedProduct = { name, price, img };
+    const img = product.querySelector("img").src;
+    const name = product.querySelector("h3").innerText;
+    const price = product.querySelector(".price")
+      ? product.querySelector(".price").innerText
+      : product.querySelector(".new-price span").innerText;
+
+    selectedProduct = { img, name, price, quantity: 1 };
 
     modalImg.src = img;
-    modalName.textContent = name;
-    modalPrice.textContent = `Price: ₦${price}`;
-    modal.style.display = "block";
+    modalName.innerText = name;
+    modalPrice.innerText = price;
+
+    modal.style.display = "flex";
   });
 });
 
 // Close modal
-closeBtn.onclick = () => {
+document.querySelector(".close").addEventListener("click", () => {
   modal.style.display = "none";
-};
+});
 
-// Purchase button
-purchaseBtn.onclick = () => {
-  if (selectedProduct) {
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
+// Add to Cart
+addToCartBtn.addEventListener("click", () => {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+  // check if product already exists
+  let existing = cart.find(item => item.name === selectedProduct.name);
+
+  if (existing) {
+    existing.quantity += 1;
+  } else {
     cart.push(selectedProduct);
-    localStorage.setItem("cart", JSON.stringify(cart));
-
-    alert(`${selectedProduct.name} has been added to your cart ✅`);
-    modal.style.display = "none";
   }
-};
 
-// Close modal if clicked outside
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-};
+  localStorage.setItem("cart", JSON.stringify(cart));
+
+  alert("Item added to cart!");
+  modal.style.display = "none";
+});
+
 </script>
 
 
